--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ img             {max-width: 100%; margin-bottom: 20px;}
 				display: block; z-index: 999;}
 .footdogs       {margin:0 5px}
 .tag            {color: #c8c8c8;}
+.notification   {color: #222; background: #fff;}
 .important      {margin-left: -18px;}
 .title          {display: inline-block; margin-bottom: 20px; margin-top: 20px;}
 .shoptitle      {display: inline-block; margin-bottom: 20px; margin-top: 20px; position: fixed;}
